--- a/experiments/sin_waves.toml
+++ b/experiments/sin_waves.toml
@@ -1,11 +1,11 @@
 [experiment]
-title = "Pilot sweep for conductance model"
-description = "Varying base input rate and synaptic connectivity."
-tag = "pilot"
+title = "Dummy Sin Waves"
+description = "Synthetic"
+tag = "dummy"
 base_seed = 1234
 
 [defaults]
-T = 12000.0
+T = 100000.0
 dt = 0.1
 E_L = -70.0
 
