--- a/experiments/conductance/single_lif/nu_x_eta.toml
+++ b/experiments/conductance/single_lif/nu_x_eta.toml
@@ -33,3 +33,4 @@ note = ""
 
 [grid]
 nu_x = [50, 150, 250, 350, 450, 550, 650, 750, 850, 950, 1050, 1150, 1250, 1350, 1450]
+eta = [0.1, 0.3, 0.5, 0.7, 0.9, 1.0, 1.1, 1.3, 1.5, 1.7, 2.0]
