--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
