--- a/experiments/conductance/single_lif/nu_x_realistic_candidate4.toml
+++ b/experiments/conductance/single_lif/nu_x_realistic_candidate4.toml
@@ -5,7 +5,7 @@ base_seed = 0
 
 [defaults]
 t_0 = 0.0
-T = 12000000
+T = 4800000
 dt = 0.1
 fano_window = 100
 burn_in_time = 20000.0
@@ -16,15 +16,17 @@ tau_m = 15.0
 Vre = -60.0
 Vth = -54.0
 tau_ref = 2.0
-tau_e = 5.0
-tau_i = 8.0
+tau_e_decay = 3.0
+tau_i_decay = 2.0
+tau_e_rise = 1.0
+tau_i_rise = 1.0
 E_i = -70.0
 E_e = 10
-g = 0.5
-a = 0.9
+g = 0.9
+a = 0.3
 K = 1
 gamma = 1
-eta = 10
+eta = 2
 
 [fixed]
 model = "single_conductance_lif"
@@ -32,4 +34,6 @@ save_downsampled = false
 note = ""
 
 [grid]
-nu_x = [20, 70, 120, 170, 220, 270, 320, 370, 420, 470, 520, 570, 620, 670]
+# 100 to 1500 in 10 steps
+nu_x = [100, 250, 400, 550, 700, 850, 1000, 1150, 1300, 1450]
+g = [0.9, 1.0, 1.1, 1.2, 1.3]
