--- a/experiments/conductance/double_lif/nu_x_1.toml
+++ b/experiments/conductance/double_lif/nu_x_1.toml
@@ -5,7 +5,7 @@ base_seed = 0
 
 [defaults]
 t_0 = 0.0
-T = 20000000
+T = 1000000
 dt = 0.1
 fano_window = 100
 burn_in_time = 20000.0
@@ -29,9 +29,10 @@ K = 1
 gamma = 1
 eta = 0.6
 c = 0.5
+N_cells = 2
 
 [fixed]
-model = "single_conductance_lif"
+model = "double_conductance_lif"
 save_downsampled = false
 note = ""
 
