Discovered a regime where nu_x goes up while FF drops!!! It's near Brunel's regime, but threshold is lower.

--- a/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench.toml
+++ b/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench.toml
@@ -17,7 +17,7 @@ tau_m = 15.0
 Vre = -65.0
 Vth = -55.0
 tau_ref = 2.0
-spike_reset = false
+spike_reset = true
 tau_e_decay = 5.0
 tau_i_decay = 8.0
 tau_e_rise = 0.0
