--- a/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench_brunel_nu_increases_cand6.toml
+++ b/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench_brunel_nu_increases_cand6.toml
@@ -1,6 +1,6 @@
 [experiment]
 title = "Single-conductance nu_x sweep"
-description = "Linear grid over nu_x with SingleConductanceLIF defaults."
+description = "nu increases, ff drops, vmean increases, but vvar decreases."
 base_seed = 0
 
 [defaults]
@@ -25,8 +25,8 @@ tau_i_rise = 0.0
 E_i = -75.0
 E_e = 0.0
 g = 12.0
-a = 0.3
-K = 33
+a = 0.2
+K = 50
 gamma = 0.25
 eta = 1.4
 
@@ -36,5 +36,5 @@ save_downsampled = false
 note = ""
 
 [grid]
-# scan 20 to 200
-nu_x = [20.0, 40.0, 60.0, 80.0, 100.0, 120.0, 140.0, 160.0, 180.0, 200.0]
+# 10 to 100 in 10 steps
+nu_x = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]
