--- a/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench_brunel.toml
+++ b/experiments/conductance/single_lif/synaptic_decay/nu_x_ff_quench_brunel.toml
@@ -26,9 +26,9 @@ E_i = -75.0
 E_e = 0.0
 g = 12.0
 a = 0.3
-K = 33
-gamma = 0.25
-eta = 1.4
+K = 1
+gamma = 1
+eta = 0.35
 
 [fixed]
 model = "single_conductance_lif"
@@ -36,5 +36,5 @@ save_downsampled = false
 note = ""
 
 [grid]
-# scan 20 to 200
-nu_x = [20.0, 40.0, 60.0, 80.0, 100.0, 120.0, 140.0, 160.0, 180.0, 200.0]
+# scan 2000 to 5000 in 10 steps
+nu_x = [2000, 2200, 2400, 2600, 2800, 3000, 3200, 3400, 3600, 3800, 4000, 4200, 4400, 4600, 4800, 5000]
