--- a/experiments/conductance/double_lif/synaptic_decay/share_E_no_SR_dt_mu_sec.toml
+++ b/experiments/conductance/double_lif/synaptic_decay/share_E_no_SR_dt_mu_sec.toml
@@ -5,8 +5,8 @@ base_seed = 0
 
 [defaults]
 t_0 = 0.0
-T = 100000000
-dt = 0.1
+T = 100000
+dt = 0.001
 fano_window = 100
 burn_in_time = 20000.0
 buffer_time = 10000.0
@@ -17,7 +17,7 @@ tau_m = 20.0
 Vre = -65.0
 Vth = -55.0
 tau_ref = 2.0
-spike_reset = true
+spike_reset = false
 tau_e_decay = 2.0
 tau_i_decay = 2.0
 tau_e_rise = 0.0
@@ -25,13 +25,13 @@ tau_i_rise = 0.0
 E_i = -75.0
 E_e = 0.0
 g = 12.0
-a = 0.015
+a = 0.3
 K = 100
 gamma = 1
 eta = 0.35
 c = 0.5
-c_e = 0.0
-c_i = 1.0
+c_e = 1.0
+c_i = 0.0
 N_cells = 2
 
 [fixed]
